# libzen

./: .gitignore  CMakeLists.txt  Imakefile  Makefile  README.md  finished.md  finished.txt  zen-groups.H
Tests/: .clang_complete  line.cc  run-test
include/: .clang_complete  Makefile  TODO.md  TODO.txt  WOR-GLR-volume-ratio-unit.H  WOR-volume-ratio-unit.H  absolute-roughness-unit.H  absolute-roughness.H  angle-unit.H  area-unit.H  array-ops.H  compoundunittbl.hpp  current-unit.H  diameter-unit.H  dimension-less-unit.H  distance-unit.H  dummy-unit.H  dynamic-viscosity-unit.H  fe-unit.H  finished.md  finished.txt  flowrate-unit.H  frequency-unit.H  friction-factor-unit.H  gas-flow-rate-unit.H  geothermal-gradient-unit.H  head-unit.H  heat-transfer-coefficient-unit.H  interfacial-tension-unit.H  ipr-units.H  isothermal-compressibility-unit.H  kinematic-viscosity-unit.H  kinetic-component-unit.H  length-unit.H  lfit.H  lin-reg.H  line.H  liquid-fraction-factor-unit.H  liquid-fraction-factor.H  liquid-no-slip-holdup-unit.H  (+43 more)
include/quantities/: FVF-volume-ratio-unit.hpp  GOR-GLR-volume-ratio-unit.hpp  OGR-LGR-volume-ratio-unit.hpp  crude-oil-specific-gravity-unit.hpp  current-unit.hpp  density-unit.hpp  dynamic-viscosity-unit.hpp  flowrate-unit.hpp  frequency-unit.hpp  gas-formation-volume-factor-unit.hpp  gas-specific-gravity-unit.hpp  head-unit.hpp  interfacial-tension-unit.hpp  isothermal-compressibility-unit.hpp  kinematic-viscosity-unit.hpp  liquid-specific-gravity-unit.hpp  non-hydrocarborns-fraction-unit.hpp  power-unit.hpp  pressure-unit.hpp  pseudo-reduced-pressure-unit.hpp  pseudo-reduced-temp-unit.hpp  temperature-unit.hpp  water-cut-unit.hpp  water-specific-gravity-unit.hpp  wet-gas-formation-volume-factor-unit.hpp  z-unit.hpp
lib/: .clang_complete  Imakefile  Makefile  TODO.md  TODO.txt  preamble.txt  units-vars.cc
src/: CMakeLists.txt  units-vars.cc  ztg_unit_manager.cc
test/: CMakeLists.txt  conversion_integrity_test.hpp  global_environment.hpp  unit_conversion_test.hpp  ztg_unit_manager_test.cpp
test/test_files/: Density.csv  DynamicViscosity.csv  FVFvolumeRatio.csv  GORGLRvolumeRatio.csv  GasFVF.csv  GasSpecificGravity.csv  InterfacialTension.csv  IsothermalCompressibility.csv  NonHydrocarbonsFraction.csv  OGRLGRvolumeRatio.csv  OilGravity.csv  Pressure.csv  Temperature.csv  WaterSpecificGravity.csv  WetGasFVF.csv  csv_files.txt
tests/: .clang_complete  Imakefile  Makefile  TODO.md  TODO.txt  sups.txt  test-all-units-1.cc  test-conversion.cc  test-lin-reg.cc  test-log-grid.cc  test-simple-grid.cc  test-unit-table.cc  vector-conversion.cc
tests/unittests/: Density.cc  DynamicViscosity.cc  FVFvolumeRatio.cc  GORGLRvolumeRatio.cc  GasFVF.cc  GasSpecificGravity.cc  gen-test  (+8 more)
tools/: CMakeLists.txt  convert.cc
